--- a/docker/process/contig/rgcrg/Dockerfile
+++ b/docker/process/contig/rgcrg/Dockerfile
@@ -1,12 +1,15 @@
 # Dockerfile for the grape-nf contig/bigwig step
 #
+ARG BEDTOOLS_VER=2.19.1
+ARG SAMBAMBA_VER=0.7.0
+
+FROM grapenf/bedtools:${BEDTOOLS_VER} as bedtools
+FROM grapenf/sambamba:${SAMBAMBA_VER} as sambamba
+
 FROM grapenf/python
 
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
 
-ARG BEDTOOLS_VER=2.19.1
-ARG SAMBAMBA_VER=0.7.0
-
-COPY --from=grapenf/bedtools:2.19.1 /usr/local/bin/* /usr/local/bin/
-COPY --from=grapenf/sambamba:0.7.0 /usr/local/bin/sambamba /usr/local/bin/
+COPY --from=bedtools /usr/local/bin/* /usr/local/bin/
+COPY --from=sambamba /usr/local/bin/sambamba /usr/local/bin/
