--- a/docker/process/mapping/star/Dockerfile
+++ b/docker/process/mapping/star/Dockerfile
@@ -1,10 +1,16 @@
 # Dockerfile for the grape-nf STAR mapping step
 #
+ARG STAR_VER=2.4.0j
+ARG SAMBAMBA_VER=0.7.0
+
+FROM grapenf/star:${STAR_VER} as star
+FROM grapenf/sambamba:${SAMBAMBA_VER} as sambamba
+
 FROM grapenf/base
 
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
 
-COPY --from=grapenf/star:2.4.0j /usr/local/bin/STAR /usr/local/bin/
-COPY --from=grapenf/star:2.4.0j /usr/glibc-compat/lib/* /usr/glibc-compat/lib/
-COPY --from=grapenf/sambamba:0.7.0 /usr/local/bin/sambamba /usr/local/bin/
+COPY --from=star /usr/local/bin/STAR /usr/local/bin/
+COPY --from=star /usr/glibc-compat/lib/* /usr/glibc-compat/lib/
+COPY --from=sambamba /usr/local/bin/sambamba /usr/local/bin/
