Whole pipeline refactoring - #51

--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -1,22 +1,9 @@
-//Strand-view mapping for bigwig step
-def bwStrandViews = [
+params.bigwigTool = params.bigwigTool ?: 'RGCRG'
+params.bigwigToolVersion = params.bigwigToolVersion ?: '0.1'
+params.bigwigViews = [
     NONE: ['RawSignal'],
     SENSE: ['MinusRawSignal', 'PlusRawSignal'],
     ANTISENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
 ]
-
-// Process configuration
-process {
-    withName: bigwig {
-        ext {
-            tool = 'RGCRG'
-            version = '0.1'
-            profile = { '-' + readStrand }
-            views = {
-                bwStrandViews[readStrand]
-            }
-        }
-    }
-}
