--- a/config/contig/RGCRG.config
+++ b/config/contig/RGCRG.config
@@ -1,10 +1,2 @@
-// Process configuration
-process {
-    withName: contig {
-        ext {
-            tool = 'RGCRG'
-            version = '0.1'
-            profile = { '-' + readStrand }
-        }
-    }
-}
+params.contigTool = params.contigTool ?: 'RGCRG'
+params.contigToolVersion = params.contigToolVersion ?: '0.1'
