--- a/config/inferExp/RSeQC.config
+++ b/config/inferExp/RSeQC.config
@@ -1,10 +1,2 @@
-// Process configuration
-process {
-    withName: inferExp {
-        ext {
-            tool = 'RSeQC'
-            version = '2.6.4'
-        }
-    }
-}
-    
+params.inferExpTool = params.inferExpTool ?: 'RSeQC'
+params.inferExpToolVersion = params.inferExpToolVersion ?: '2.6.4'
