--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -1,19 +1,2 @@
-// Process configuration
-process { 
-    withName: 'index' {
-        ext {
-            tool = 'STAR'
-            version = '2.4.0j'
-            profile = { genomeCompressed + annoCompressed }
-        }
-    }
-
-    withName: 'mapping' {
-        ext {
-            tool = 'STAR'
-            version = '2.4.0j'
-            readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
-            profile = { "-${task.ext.version.split("\\.")[0..1].join(".")}" + (task.ext.sort ? "-"+task.ext.sort : '') + (quantificationMode ? "-"+quantificationMode : '') + (params.addXs ? "-XS" : '') }
-        }
-    }
-}
+params.mappingTool = params.mappingTool ?: 'STAR'
+params.mappingToolVersion = params.mappingToolVersion ?: '2.4.0j'
