--- a/config/markdup/sambamba.config
+++ b/config/markdup/sambamba.config
@@ -1,10 +1,2 @@
-// Process configuration
-process {
-    withName: markdup {
-        ext {
-            tool = 'sambamba'
-            version = '0.7.0'
-            profile = { params.removeDuplicates ? "-remove" : "" }
-        }
-    }
-}
+params.markdupTool = params.markdupTool ?: 'sambamba'
+params.markdupToolVersion = params.markdupToolVersion ?: '0.7.0'
