--- a/config/mergeBam/sambamba.config
+++ b/config/mergeBam/sambamba.config
@@ -1,9 +1,2 @@
-// Process configuration
-process {
-    withName: mergeBam {
-        ext {
-            tool = 'sambamba'
-            version = '0.7.0'
-        }
-    }
-}
+params.mergeBamTool = params.mergeBamTool ?: 'sambamba'
+params.mergeBamToolVersion = params.mergeBamToolVersion ?: '0.7.0'
