--- a/config/quantification/FLUX.config
+++ b/config/quantification/FLUX.config
@@ -1,12 +1,4 @@
-// Process configuration
-process {
-    withName: quantification {
-        ext {
-            tool = 'FLUX'
-            version = '1.6.1'
-            profile = { '-' + readStrand }
-            mode = 'Genome'
-            fileType = 'gtf'
-        }
-    }
-}
+params.quantificationTool = 'FLUX'
+params.quantificationToolVersion = '1.6.1'
+params.quantificationMode = 'Genome'
+params.quantificationFileType = 'gtf'
