--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -1,20 +1,4 @@
-// Process configuration
-process {
-    withName: 'txIndex' {
-        ext {
-            tool = 'RSEM'
-            version = '1.2.21'
-            profile = { genomeCompressed + annoCompressed }
-        }
-    }
-    
-    withName: 'quantification' {
-        ext {
-            tool = 'RSEM'
-            version = '1.2.21'
-            profile = { '-' + (pairedEnd ? 'Paired-End' : 'Single-End') + '-' + readStrand }
-            mode = 'Transcriptome'
-            fileType = 'tsv'
-        }
-    }
-}
+params.quantificationTool = params.quantificationTool ?: 'RSEM'
+params.quantificationToolVersion = params.quantificationToolVersion ?: '1.2.21'
+params.quantificationMode = 'Transcriptome'
+params.quantificationFileType = 'tsv'
