--- a/nextflow.config
+++ b/nextflow.config
@@ -23,62 +23,37 @@ singularity {
 // Enable trace by default
 trace.enabled = true
 
-// Process configuration
-process {
-
-    ext {
-        command = {
-            cpus = task.cpus
-            "${task.process}/${task.ext.tool}${task.ext.profile}"
-        }
-        profile = ''
-    }
-    errorStrategy = 'ignore'
-
-    tag = { 
-        (id ? id.replace(':', '_') : species) + "-${task.ext.tool}-${task.ext.version}"
-    }
-
-    container = { 
-        "grapenf/${task.process.toLowerCase()}:${task.ext.tool.toLowerCase()}-${task.ext.version}" 
-    }
-
-    withName: 'fetch' {
-        container = 'grapenf/base'
-    }
-
-}
-
 // Pipeline profiles
 profiles {
     
     // default profile - same as starrsem with sambamba sorting
     standard {
-        params.bamSort = "sambamba"
-        
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        params.mappingSortTool = "sambamba"
+
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
     }
 
     // same as ihec profile with small test dataset
     markdup {
         params.markDuplicates = true
 
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/markdup/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
     }
 
     // same as ihec profile with small test dataset and an
@@ -86,15 +61,15 @@ profiles {
     rmdup {
         params.removeDuplicates = true
 
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/markdup/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
     }
 
     // IHEC profile
@@ -107,87 +82,132 @@ profiles {
         params.markDuplicates = true
         parmas.bamSort = 'sambamba'
 
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
+
         // Computing resources
         includeConfig "$baseDir/ihec-resources.config"
 
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/markdup/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
     }
 
     
     // profile with STAR and RSEM
     starrsem {
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
     }
 
 
     // profile with STAR and FLUX
     starflux {
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/FLUX.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "FLUX"
     }
 
     // profile with GEM and FLUX
     gemflux {
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/GEM.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/RGCRG.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/FLUX.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "GEM"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "RGCRG"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "FLUX"
     }
     
     // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
     encode3 {
         params.bamSort = "sambamba"
 
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/sambamba.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bamStats/bamstats.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
 
-        process {
-            withName: 'index' {
-                version = '2.5.1b'
-            }
-            withName: 'mapping' {
-                version = '2.5.1b'
-            }
-            withName: 'bigwig' {
-                version = '2.5.1b'
-            }
-            withName: 't_index' {
-                version = '1.2.23'
-            }
-            withName: 'quantification' {
-                version = '1.2.23'
-            }
-        }
+        params.mappingToolVersion = '2.5.1b'
+        params.bigwigToolVersion = '2.5.1b'
+        params.quantificationToolVersion = '1.2.23'
     }
+}
+
+includeConfig "config/fastaIndex/${params.fastaIndexTool}.config"
+includeConfig "config/mapping/${params.mappingTool}.config"
+includeConfig "config/mergeBam/${params.mergeBamTool}.config"
+includeConfig "config/markdup/${params.markdupTool}.config"
+includeConfig "config/inferExp/${params.inferExpTool}.config"
+includeConfig "config/bamStats/${params.bamStatsTool}.config"
+includeConfig "config/bigwig/${params.bigwigTool}.config"
+includeConfig "config/contig/${params.contigTool}.config"
+includeConfig "config/quantification/${params.quantificationTool}.config"
+
+// Process configuration
+process {
+
+    container = 'grapenf/base'
+    errorStrategy = 'ignore'    
+
+    withName: 'fastaIndex' {
+        container = "grapenf/fastaindex:${params.fastaIndexTool.toLowerCase()}-${params.fastaIndexToolVersion}"
+    }
+
+    withLabel: 'mapping' {
+        container = "grapenf/mapping:${params.mappingTool.toLowerCase()}-${params.mappingToolVersion}"
+    }
+
+    withName: 'mergeBam' {
+        container = "grapenf/mergebam:${params.mergeBamTool.toLowerCase()}-${params.mergeBamToolVersion}"
+    }
+
+    withName: 'markdup' {
+        container = "grapenf/markdup:${params.markdupTool.toLowerCase()}-${params.markdupToolVersion}"
+    }
+
+    withName: 'inferExp' {
+        container = "grapenf/inferexp:${params.inferExpTool.toLowerCase()}-${params.inferExpToolVersion}"
+    }
+
+    withName: 'bamStats' {
+        container = "grapenf/bamstats:${params.bamStatsTool.toLowerCase()}-${params.bamStatsToolVersion}"
+    }
+    
+    withName: 'bigwig' {
+        container = "grapenf/bigwig:${params.bigwigTool.toLowerCase()}-${params.bigwigToolVersion}"
+    }
+    
+    withName: 'contig' {
+        container = "grapenf/contig:${params.contigTool.toLowerCase()}-${params.contigToolVersion}"
+    }
+
+    withLabel: 'quantification' {
+        container = "grapenf/quantification:${params.quantificationTool.toLowerCase()}-${params.quantificationToolVersion}"
+    }
+
 }
