--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -1,22 +1,9 @@
-//Strand-view mapping for bigwig step
-def bwStrandViews = [
+params.bigwigTool = params.bigwigTool ?: 'STAR'
+params.bigwigToolVersion = params.bigwigToolVersion ?: '2.4.0j'
+params.bigwigViews = [
     NONE: ['RawSignal','MultipleRawSignal'],
     SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     ANTISENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal']
 ]
-
-// Process configuration
-process {
-    withName: bigwig {
-        ext {
-            tool = 'STAR'
-            version = '2.4.0j'
-            profile = { '-' + readStrand }
-            views = {
-                bwStrandViews[readStrand]
-            }
-        }
-    }
-}
