--- a/config/mapping/GEM.config
+++ b/config/mapping/GEM.config
@@ -1,2 +1,3 @@
 params.mappingTool = params.mappingTool ?: 'GEM'
 params.mappingToolVersion = params.mappingToolVersion ?: '1.7.1'
+params.mappingReadGroupSeparators = [ '=', ',' ]
