Fix workflow for input bams and add test profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -93,7 +93,7 @@ profiles {
         params.quantificationTool = "RSEM"
 
         // Computing resources
-        includeConfig "$baseDir/ihec-resources.config"
+        //includeConfig "$baseDir/ihec-resources.config"
 
     }
 
@@ -156,6 +156,24 @@ profiles {
         params.bigwigToolVersion = '2.5.1b'
         params.quantificationToolVersion = '1.2.23'
     }
+
+    // test profile to test input bam workflow, same as standard but with different 
+    // input index
+    testbam {
+        params.index = "test-index-bam.txt"
+        params.mappingSortTool = "sambamba"
+
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
+    }
+
 }
 
 includeConfig "config/fastaIndex/${params.fastaIndexTool}.config"
