Add code for sorting transcriptome bams before merging them

--- a/nextflow.config
+++ b/nextflow.config
@@ -200,6 +200,10 @@ process {
         container = "grapenf/mapping:${params.mappingTool.toLowerCase()}-${params.mappingToolVersion}"
     }
 
+    withName: 'sortBam' {
+        container = "grapenf/mergebam:${params.mergeBamTool.toLowerCase()}-${params.mergeBamToolVersion}"
+    }
+    
     withName: 'mergeBam' {
         container = "grapenf/mergebam:${params.mergeBamTool.toLowerCase()}-${params.mergeBamToolVersion}"
     }
