Clean up config and update it to use single IHEC image

--- a/nextflow.config
+++ b/nextflow.config
@@ -39,65 +39,10 @@ profiles {
         params.bigwigTool = "STAR"
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
+
+        includeConfig "config/container/docker-multi.config"
     }
 
-    // same as ihec profile with small test dataset
-    markdup {
-        params.markDuplicates = true
-
-        params.fastaIndexTool = "samtools"
-        params.mappingTool = "STAR"
-        params.mergeBamTool = "sambamba"
-        params.markdupTool = "sambamba"
-        params.inferExpTool = "RSeQC"
-        params.bamStatsTool = "bamstats"
-        params.bigwigTool = "STAR"
-        params.contigTool = "RGCRG"
-        params.quantificationTool = "RSEM"
-    }
-
-    // same as ihec profile with small test dataset and an
-    // additional step to remove duplicates
-    rmdup {
-        params.removeDuplicates = true
-
-        params.fastaIndexTool = "samtools"
-        params.mappingTool = "STAR"
-        params.mergeBamTool = "sambamba"
-        params.markdupTool = "sambamba"
-        params.inferExpTool = "RSeQC"
-        params.bamStatsTool = "bamstats"
-        params.bigwigTool = "STAR"
-        params.contigTool = "RGCRG"
-        params.quantificationTool = "RSEM"
-    }
-
-    // IHEC profile
-    ihec {
-        // IHEC test data and references
-        params.index = "$baseDir/ihec-index.txt"
-        params.genome = 'http://ftp.ebi.ac.uk/pub/databases/blueprint/reference/20150407_reference_files/GRCh38_no_alt_analysis_set.201503031.fa.gz'
-        params.annotation = 'ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_29/gencode.v29.annotation.gtf.gz'
-        
-        params.markDuplicates = true
-        parmas.bamSort = 'sambamba'
-
-        params.fastaIndexTool = "samtools"
-        params.mappingTool = "STAR"
-        params.mergeBamTool = "sambamba"
-        params.markdupTool = "sambamba"
-        params.inferExpTool = "RSeQC"
-        params.bamStatsTool = "bamstats"
-        params.bigwigTool = "STAR"
-        params.contigTool = "RGCRG"
-        params.quantificationTool = "RSEM"
-
-        // Computing resources
-        //includeConfig "$baseDir/ihec-resources.config"
-
-    }
-
-    
     // profile with STAR and RSEM
     starrsem {
         params.fastaIndexTool = "samtools"
@@ -109,6 +54,8 @@ profiles {
         params.bigwigTool = "STAR"
         params.contigTool = "RGCRG"
         params.quantificationTool = "RSEM"
+
+        includeConfig "config/container/docker-multi.config"
     }
 
 
@@ -123,6 +70,8 @@ profiles {
         params.bigwigTool = "STAR"
         params.contigTool = "RGCRG"
         params.quantificationTool = "FLUX"
+
+        includeConfig "config/container/docker-multi.config"
     }
 
     // profile with GEM and FLUX
@@ -136,11 +85,79 @@ profiles {
         params.bigwigTool = "RGCRG"
         params.contigTool = "RGCRG"
         params.quantificationTool = "FLUX"
+
+        includeConfig "config/container/docker-multi.config"
+    }
+
+    // same as starrsem profile with an additional step to mark duplicates
+    markdup {
+        params.markDuplicates = true
+
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
+
+        includeConfig "config/container/docker-multi.config"
+    }
+
+    // same as starrsem profile with an additional step to remove duplicates
+    rmdup {
+        params.removeDuplicates = true
+
+        params.fastaIndexTool = "samtools"
+        params.mappingTool = "STAR"
+        params.mergeBamTool = "sambamba"
+        params.markdupTool = "sambamba"
+        params.inferExpTool = "RSeQC"
+        params.bamStatsTool = "bamstats"
+        params.bigwigTool = "STAR"
+        params.contigTool = "RGCRG"
+        params.quantificationTool = "RSEM"
+
+        includeConfig "config/container/docker-multi.config"
+    }
+
+    // IHEC profile
+    ihec {
+        params.markDuplicates = true
+        params.mappingSortTool = 'sambamba'
+
+        includeConfig "$baseDir/config/fastaIndex/samtools.config"
+        includeConfig "$baseDir/config/mapping/STAR.config"
+        includeConfig "$baseDir/config/mergeBam/sambamba.config"
+        includeConfig "$baseDir/config/markdup/sambamba.config"
+        includeConfig "$baseDir/config/inferExp/RSeQC.config"
+        includeConfig "$baseDir/config/bamStats/bamstats.config"
+        includeConfig "$baseDir/config/bigwig/STAR.config"
+        includeConfig "$baseDir/config/contig/RGCRG.config"
+        includeConfig "$baseDir/config/quantification/RSEM.config"
+
+        process {
+            container = "grapenf/ihec:latest"
+        }
+
+    }
+
+    // Profile for using IHEC test dataset (must be used in conjunction with another computing profile)
+    ihecdata {
+        // IHEC test data and references
+        params.index = "$baseDir/ihec-index.txt"
+        params.genome = 'http://ftp.ebi.ac.uk/pub/databases/blueprint/reference/20150407_reference_files/GRCh38_no_alt_analysis_set.201503031.fa.gz'
+        params.annotation = 'ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_29/gencode.v29.annotation.gtf.gz'
+
+        // Computing resources
+        includeConfig "$baseDir/config/resources/ihec.config"
     }
     
     // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
     encode3 {
-        params.bamSort = "sambamba"
+        params.mappingSortTool = "sambamba"
 
         params.fastaIndexTool = "samtools"
         params.mappingTool = "STAR"
@@ -155,81 +172,8 @@ profiles {
         params.mappingToolVersion = '2.5.1b'
         params.bigwigToolVersion = '2.5.1b'
         params.quantificationToolVersion = '1.2.23'
-    }
 
-    // test profile to test input bam workflow, same as standard but with different 
-    // input index
-    testbam {
-        params.index = "test-index-bam.txt"
-        params.mappingSortTool = "sambamba"
-
-        params.fastaIndexTool = "samtools"
-        params.mappingTool = "STAR"
-        params.mergeBamTool = "sambamba"
-        params.markdupTool = "sambamba"
-        params.inferExpTool = "RSeQC"
-        params.bamStatsTool = "bamstats"
-        params.bigwigTool = "STAR"
-        params.contigTool = "RGCRG"
-        params.quantificationTool = "RSEM"
-    }
-
-}
-
-includeConfig "config/fastaIndex/${params.fastaIndexTool}.config"
-includeConfig "config/mapping/${params.mappingTool}.config"
-includeConfig "config/mergeBam/${params.mergeBamTool}.config"
-includeConfig "config/markdup/${params.markdupTool}.config"
-includeConfig "config/inferExp/${params.inferExpTool}.config"
-includeConfig "config/bamStats/${params.bamStatsTool}.config"
-includeConfig "config/bigwig/${params.bigwigTool}.config"
-includeConfig "config/contig/${params.contigTool}.config"
-includeConfig "config/quantification/${params.quantificationTool}.config"
-
-// Process configuration
-process {
-
-    container = 'grapenf/base'
-    errorStrategy = 'ignore'    
-
-    withName: 'fastaIndex' {
-        container = "grapenf/fastaindex:${params.fastaIndexTool.toLowerCase()}-${params.fastaIndexToolVersion}"
-    }
-
-    withLabel: 'mapping' {
-        container = "grapenf/mapping:${params.mappingTool.toLowerCase()}-${params.mappingToolVersion}"
-    }
-
-    withName: 'sortBam' {
-        container = "grapenf/mergebam:${params.mergeBamTool.toLowerCase()}-${params.mergeBamToolVersion}"
-    }
-    
-    withName: 'mergeBam' {
-        container = "grapenf/mergebam:${params.mergeBamTool.toLowerCase()}-${params.mergeBamToolVersion}"
-    }
-
-    withName: 'markdup' {
-        container = "grapenf/markdup:${params.markdupTool.toLowerCase()}-${params.markdupToolVersion}"
-    }
-
-    withName: 'inferExp' {
-        container = "grapenf/inferexp:${params.inferExpTool.toLowerCase()}-${params.inferExpToolVersion}"
-    }
-
-    withName: 'bamStats' {
-        container = "grapenf/bamstats:${params.bamStatsTool.toLowerCase()}-${params.bamStatsToolVersion}"
-    }
-    
-    withName: 'bigwig' {
-        container = "grapenf/bigwig:${params.bigwigTool.toLowerCase()}-${params.bigwigToolVersion}"
-    }
-    
-    withName: 'contig' {
-        container = "grapenf/contig:${params.contigTool.toLowerCase()}-${params.contigToolVersion}"
-    }
-
-    withLabel: 'quantification' {
-        container = "grapenf/quantification:${params.quantificationTool.toLowerCase()}-${params.quantificationToolVersion}"
+        includeConfig "config/container/docker-multi.config"
     }
 
 }
