--- a/nextflow.config
+++ b/nextflow.config
@@ -145,8 +145,8 @@ profiles {
     }
 
     // Profile for using IHEC test dataset (must be used in conjunction with another computing profile)
-    ihecdata {
-        // IHEC test data and references
+    "ihec-data" {
+        // IHEC test dataset (MCF10A) and references
         params.index = "$baseDir/ihec-index.txt"
         params.genome = 'http://ftp.ebi.ac.uk/pub/databases/blueprint/reference/20150407_reference_files/GRCh38_no_alt_analysis_set.201503031.fa.gz'
         params.annotation = 'ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_29/gencode.v29.annotation.gtf.gz'
